feat: add destroy_config_json

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -16,7 +16,7 @@ jobs:
     with:
       environment: dev 
       aws-assume-role-arn: "arn:aws:iam::302263044104:role/github-actions-joaoneves11-pipeline"
-      aws-region: "sa-east-1"
+      aws-region: "us-east-1"
       aws-statefile-s3-bucket: "joaoneves11-sa-east-1-terraform-statefile"
       aws-lock-dynamodb-table: "joaoneves11-sa-east-1-terraform-lock"
 
